--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 
             <footer class="mt-md-5 pt-5 gray-500 small w-100 d-flex justify-md-content-between justify-content-center gap-2 flex-md-row flex-column flex-wrap text-md-start text-center" style="max-width: 1000px">
                <span>© 2026 Portfolio.</span>
-               <span>Crafted with GSAP & Bootstrap.</span>
+               <span>Crafted with HTML, GSAP & Bootstrap.</span>
             </footer>
          </section>
       </main>
