--- a/index.html
+++ b/index.html
@@ -395,19 +395,22 @@
                   <div class="project-card hover-trigger cursor-none">
                      <div class="card-image-wrapper">
                         <div class="card-overlay"></div>
-                        <img src="https://hoirqrkdgbmvpwutwuwj.supabase.co/storage/v1/object/public/assets/assets/917d6f93-fb36-439a-8c48-884b67b35381_1600w.jpg" alt="Project 1" class="project-img" />
+                        <img src="https://storerav.com/assets/images/about-service-thumnail.webp" alt="pillyponka-thumbnail" alt="Project 1" class="project-img" />
                         <div class="card-arrow">
-                           <span class="iconify text-white" data-icon="lucide:arrow-up-right" data-width="20"></span>
+                           <a href="https://pillyponka.com/">
+                              <span class="iconify text-white" data-icon="lucide:arrow-up-right" data-width="20"></span>
+                           </a>
                         </div>
                      </div>
                      <div class="d-flex justify-content-between align-items-start flex-wrap gap-3">
                         <div>
-                           <h3 class="h5 fw-medium text-white mb-1">Chronos Finance</h3>
-                           <p class="text-muted small">Fintech • Dashboard</p>
+                           <h3 class="h5 fw-medium text-white mb-1">StoreRav</h3>
+                           <p class="text-muted small">Pre Build Theme</p>
                         </div>
                         <div class="d-flex gap-2">
-                           <span class="badge-custom">React</span>
-                           <span class="badge-custom">GSAP</span>
+                           <span class="badge-custom">HTML</span>
+                           <span class="badge-custom">CSS</span>
+                           <span class="badge-custom">Jquery</span>
                         </div>
                      </div>
                   </div>
@@ -418,19 +421,21 @@
                   <div class="project-card hover-trigger cursor-none">
                      <div class="card-image-wrapper">
                         <div class="card-overlay"></div>
-                        <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=2564&auto=format&fit=crop" alt="Project 2" class="project-img" />
+                        <img src="https://img.sanishtech.com/u/aa0469de7fbdf75a9cea11ed74c19230.png" alt="zohoone-thumbnail" class="project-img" />
                         <div class="card-arrow">
-                           <span class="iconify text-white" data-icon="lucide:arrow-up-right" data-width="20"></span>
+                           <a href="https://zohoonedevelopers.com/">
+                              <span class="iconify text-white" data-icon="lucide:arrow-up-right" data-width="20"></span>
+                           </a>
                         </div>
                      </div>
                      <div class="d-flex justify-content-between align-items-start flex-wrap gap-3">
                         <div>
-                           <h3 class="h5 fw-medium text-white mb-1">Aether Lens</h3>
-                           <p class="text-muted small">AI Tool • Interface</p>
+                           <h3 class="h5 fw-medium text-white mb-1">Zoho One Developers</h3>
+                           <p class="text-muted small">Zoho Services Provider</p>
                         </div>
                         <div class="d-flex gap-2">
-                           <span class="badge-custom">Next.js</span>
-                           <span class="badge-custom">WebGL</span>
+                           <span class="badge-custom">WordPress</span>
+                           <span class="badge-custom">ACF</span>
                         </div>
                      </div>
                   </div>
