--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         <div class="card-overlay"></div>
                         <img src="https://storerav.com/assets/images/about-service-thumnail.webp" alt="pillyponka-thumbnail" alt="Project 1" class="project-img" />
                         <div class="card-arrow">
-                           <a href="https://pillyponka.com/">
+                           <a href="https://storerav.com/">
                               <span class="iconify text-white" data-icon="lucide:arrow-up-right" data-width="20"></span>
                            </a>
                         </div>
